# kindle-personal-dashboard

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  flake.nix  justfile
assets/: config.xml  kpd_config.toml  menu.json
cmake/: generic_kindle_toolchain.cmake  kindlepw2_toolchain.cmake
core/: CMakeLists.txt  Cargo.toml  cbindgen.toml
core/.cargo/: config.toml
core/src/: api.rs  config.rs  lib.rs  state.rs
core/src/integrations/: gh_heatmap.rs  mod.rs
core/src/kindle/: device_impl.rs  local_dev_impl.rs  mod.rs
include/: kindle_awm_helper.hpp
include/kpd/: g_signal_lambda.hpp  gh_heatmap.hpp  kindle_awm_helper.hpp  window.hpp
rust_foo/: .gitignore  CMakeLists.txt  Cargo.toml  build.rs
rust_foo/src/: api.rs  lib.rs
src/: getauxval_fix.cpp  gh_heatmap.cpp  main.cpp  window.cpp
tools/asan/: gtk.supp
