[package]
name = "kindle_personal_dashboard_core"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib", "rlib"]

[build-dependencies]
cbindgen = "0.29.2"

[features]
local_dev = []


[profile.release]
opt-level = 2
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
thiserror = "2.0.18"
