[package]
name = "kindle_personal_dashboard_core"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib"]

[dependencies]
thiserror = "2.0.18"
chrono = "0.4.44"
tokio = { version = "1.52.3", features = ["rt", "net"] }
google-tasks1 = "7.0.0"
http-body-util = "0.1.3"
scraper = "0.27.0"

[features]
local_dev = []


[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
